Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6985719/T6985719c.out
T6985719c.java:14:5: compiler.err.name.clash.same.erasure.no.override: f, java.util.List<java.lang.Integer>, T6985719c.B, f, java.util.List<java.lang.String>, T6985719c.A
1 error
